<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/summary_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/movie_summary"
            android:textColor="@color/lighter_gray"
            android:textSize="@dimen/summary_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cover_view"
            app:layout_constraintTop_toBottomOf="@+id/release_date_view" />

        <TextView
            android:id="@+id/duration_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/movie_duration"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/duration_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/title_view"
            app:layout_constraintStart_toEndOf="@+id/title_view"
            app:layout_constraintTop_toTopOf="@+id/title_view"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/movie_title"
            android:textColor="@color/gray"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cover_view"
            app:layout_constraintTop_toBottomOf="@+id/cover_view" />

        <TextView
            android:id="@+id/release_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_release_date"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/summary_text_size"
            app:layout_constraintStart_toStartOf="@+id/cover_view"
            app:layout_constraintTop_toBottomOf="@+id/title_view" />

        <ImageView
            android:id="@+id/cover_view"
            android:layout_width="@dimen/poster_activity_height"
            android:layout_height="@dimen/poster_activity_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

        <ImageView
            android:id="@+id/favorite_button_view"
            android:layout_width="@dimen/favorite_button_size"
            android:layout_height="@dimen/favorite_button_size"
            android:layout_marginEnd="8dp"
            android:background="@drawable/heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cover_view"
            app:layout_constraintTop_toTopOf="@+id/cover_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>