<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/movieCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/movieContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3CE4CAC6">

            <ImageView
                android:id="@+id/cover_view"
                android:layout_width="@dimen/poster_width"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="225dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLength="24"
                android:singleLine="true"
                android:text="@string/movie_title"
                android:textColor="@color/gray"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cover_view"
                app:layout_constraintTop_toTopOf="@+id/cover_view" />


            <TextView
                android:id="@+id/summary_view"
                android:layout_width="225dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:singleLine="false"
                android:text="@string/movie_summary"
                android:textColor="@color/lighter_gray"
                android:textSize="@dimen/summary_text_size"
                app:layout_constraintStart_toStartOf="@+id/title_view"
                app:layout_constraintTop_toBottomOf="@+id/title_view" />

            <TextView
                android:id="@+id/duration_view"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:text="@string/movie_duration"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/duration_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/cover_view"
                app:layout_constraintStart_toStartOf="@+id/title_view"
                app:layout_constraintTop_toBottomOf="@+id/summary_view" />

            <TextView
                android:id="@+id/release_date_view"
                android:layout_width="50dp"
                android:layout_height="16dp"
                android:text="@string/movie_release_date"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/summary_text_size"
                app:layout_constraintBottom_toTopOf="@+id/summary_view"
                app:layout_constraintEnd_toStartOf="@+id/favorite_button_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/title_view"
                app:layout_constraintTop_toBottomOf="@+id/title_view"
                app:layout_constraintVertical_bias="1.0" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/favorite_button_view"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="64dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:longClickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintStart_toEndOf="@+id/title_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.145"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/heart_fill"
                app:lottie_renderMode="automatic" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>